--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "io.realm:realm-gradle-plugin:5.1.0"
 
 
@@ -21,7 +23,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+
     }
 }
 
