--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar'
+
 }
