dependence Toothpick Added New branch called Realm_with_Toothpick

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,15 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [toothpick_registry_package_name: 'com.example.filmrepositoryapp']
+            }
+        }
+
+        buildConfigField("Boolean", "useRealm", "true")
+
+
     }
 
     buildTypes {
