--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,24 @@ dependencies {
     implementation 'com.github.stephanenicolas.toothpick:smoothie:1.1.3'
     annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3'
 
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    // alternatively - just ViewModel
+    //implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    // alternatively - just LiveData
+    //implementation "android.arch.lifecycle:livedata:$lifecycle_version"
+    // alternatively - Lifecycles only (no ViewModel or LiveData).
+    //     Support library depends on this lightweight import
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    // alternately - if using Java8, use the following instead of compiler
+    implementation "android.arch.lifecycle:common-java8:1.1.1"
+
+    // optional - ReactiveStreams support for LiveData
+    implementation "android.arch.lifecycle:reactivestreams:1.1.1"
 
 
 }
