itmber add in gradle app Another yet Multipie Errors corrected Many errors still needs to be corrected New branch called Realm_with_Toothpick

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,6 @@ dependencies {
     // optional - ReactiveStreams support for LiveData
     implementation "android.arch.lifecycle:reactivestreams:1.1.1"
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
