--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
 
         </activity>
-
+        <activity android:name=".ui.filmDetail.FilmDetailActivity" />
     </application>
 
 </manifest>
